--- a/package.json
+++ b/package.json
@@ -58,15 +58,16 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "faker": "^3.1.0",
     "jquery": "^2.2.4",
     "jquery-validation": "^1.15.1",
     "meteor-promise": "^0.7.3",
-    "react": "^15.3.0",
+    "react": "^15.3.1",
     "react-addons-pure-render-mixin": "^15.2.1",
-    "react-bootstrap": "^0.30.2",
-    "react-dom": "^15.3.0",
+    "react-bootstrap": "^0.30.3",
+    "react-dom": "^15.3.1",
     "react-komposer": "^1.13.1",
-    "react-router": "^2.6.1",
+    "react-router": "^2.7.0",
     "react-router-bootstrap": "^0.23.1"
   }
 }
